Fixed the spacing

--- a/src/styles/ServicePage.css
+++ b/src/styles/ServicePage.css
@@ -39,9 +39,10 @@
 
 .advanced-options {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     cursor: pointer;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .display-options {
